version/0.17/_sources/api/ansys/geometry/core/sketch/nurbs/SketchNurbs.rst.txt






:class:`SketchNurbs`
====================


.. py:class:: ansys.geometry.core.sketch.nurbs.SketchNurbs

   Bases: :py:obj:`ansys.geometry.core.sketch.edge.SketchEdge`


   
   Represents a NURBS sketch curve.











   .. warning::

       NURBS sketching is only supported in 26R1 and later versions of Ansys.


   .. rubric:: Notes

   This class is a wrapper around the NURBS curve class from the `geomdl` library.
   By leveraging the `geomdl` library, this class provides a high-level interface
   to create and manipulate NURBS curves. The `geomdl` library is a powerful
   library for working with NURBS curves and surfaces. For more information, see
   https://pypi.org/project/geomdl/.



   ..
       !! processed by numpydoc !!







.. py:currentmodule:: SketchNurbs

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~fit_curve_from_points`
            - Fit a NURBS curve to a set of points.
          * - :py:attr:`~from_control_points`
            - Create a NURBS curve from control points.
          * - :py:attr:`~from_json_file`
            - Create NURBS sketch curve(s) from a JSON file or JSON string.
          * - :py:attr:`~to_json_file`
            - Serialize one or more NURBS sketch curves to a JSON file.
          * - :py:attr:`~partial_ellipse`
            - Create an exact rational NURBS for a partial ellipse arc.


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~contains_point`
            - Check if the curve contains a given point within a specified tolerance.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~geomdl_nurbs_curve`
            - Get the underlying NURBS curve.
          * - :py:attr:`~control_points`
            - Get the control points of the curve.
          * - :py:attr:`~degree`
            - Get the degree of the curve.
          * - :py:attr:`~knots`
            - Get the knot vector of the curve.
          * - :py:attr:`~weights`
            - Get the weights of the control points.
          * - :py:attr:`~start`
            - Get the start point of the curve.
          * - :py:attr:`~end`
            - Get the end point of the curve.
          * - :py:attr:`~visualization_polydata`
            - Get the VTK polydata representation for PyVista visualization.







Import detail
-------------

.. code-block:: python

    from ansys.geometry.core.sketch.nurbs import SketchNurbs

Property detail
---------------

.. py:property:: geomdl_nurbs_curve
   :type: geomdl.NURBS.Curve


   
   Get the underlying NURBS curve.













   .. rubric:: Notes

   This property gives access to the full functionality of the NURBS curve
   coming from the `geomdl` library. Use with caution.



   ..
       !! processed by numpydoc !!

.. py:property:: control_points
   :type: list[ansys.geometry.core.math.point.Point2D]


   
   Get the control points of the curve.
















   ..
       !! processed by numpydoc !!

.. py:property:: degree
   :type: int


   
   Get the degree of the curve.
















   ..
       !! processed by numpydoc !!

.. py:property:: knots
   :type: list[ansys.geometry.core.typing.Real]


   
   Get the knot vector of the curve.
















   ..
       !! processed by numpydoc !!

.. py:property:: weights
   :type: list[ansys.geometry.core.typing.Real]


   
   Get the weights of the control points.
















   ..
       !! processed by numpydoc !!

.. py:property:: start
   :type: ansys.geometry.core.math.point.Point2D


   
   Get the start point of the curve.
















   ..
       !! processed by numpydoc !!

.. py:property:: end
   :type: ansys.geometry.core.math.point.Point2D


   
   Get the end point of the curve.
















   ..
       !! processed by numpydoc !!

.. py:property:: visualization_polydata
   :type: pyvista.PolyData


   
   Get the VTK polydata representation for PyVista visualization.





   :Returns:

       :obj:`pyvista.PolyData`
           VTK pyvista.Polydata configuration.








   .. rubric:: Notes

   The representation lies in the X/Y plane within
   the standard global Cartesian coordinate system.



   ..
       !! processed by numpydoc !!




Method detail
-------------

.. py:method:: contains_point(point: ansys.geometry.core.math.point.Point2D, tol: float = 1e-06) -> bool

   
   Check if the curve contains a given point within a specified tolerance.


   :Parameters:

       **point** : :obj:`Point2D`
           The point to check.

       **tol** : :class:`python:float`, :obj:`optional`
           The tolerance for the containment check, by default 1e-6.



   :Returns:

       :ref:`bool <python:bltin-boolean-values>`
           True if the curve contains the point within the tolerance, False otherwise.











   ..
       !! processed by numpydoc !!

.. py:method:: fit_curve_from_points(points: list[ansys.geometry.core.math.point.Point2D], degree: int = 3) -> SketchNurbs
   :classmethod:


   
   Fit a NURBS curve to a set of points.


   :Parameters:

       **points** : :class:`python:list`\[:obj:`Point2D`]
           The points to fit the curve to.

       **degree** : :class:`python:int`, :obj:`optional`
           The degree of the NURBS curve, by default 3.



   :Returns:

       :obj:`SketchNurbs`
           A new instance of SketchNurbs fitted to the given points.











   ..
       !! processed by numpydoc !!

.. py:method:: from_control_points(control_points: list[ansys.geometry.core.math.point.Point2D], degree: int, knots: list[ansys.geometry.core.typing.Real], weights: list[ansys.geometry.core.typing.Real] | None = None) -> SketchNurbs
   :classmethod:


   
   Create a NURBS curve from control points.


   :Parameters:

       **control_points** : :class:`python:list`\[:obj:`Point2D`]
           Control points of the curve.

       **degree** : :class:`python:int`
           Degree of the curve.

       **knots** : :class:`python:list`\[:obj:`Real`]
           Knot vector of the curve.

       **weights** : :class:`python:list`\[:obj:`Real`], :obj:`optional`
           Weights of the control points.



   :Returns:

       :obj:`SketchNurbs`
           NURBS curve.











   ..
       !! processed by numpydoc !!

.. py:method:: from_json_file(source: Union[str, pathlib.Path], elements: Optional[list[str]] = None) -> Union[SketchNurbs, dict[str, SketchNurbs]]
   :classmethod:


   
   Create NURBS sketch curve(s) from a JSON file or JSON string.


   :Parameters:

       **source** : :obj:`Union`\[:class:`python:str`, :obj:`Path`]
           JSON file path, or a raw JSON string.

       **elements** : :class:`python:list`\[:class:`python:str`], :obj:`optional`
           Names of the elements to build. If omitted, every element
           found in the JSON is built.



   :Returns:

       :obj:`Union`\[:obj:`SketchNurbs`, :class:`python:dict`\[:class:`python:str`, :obj:`SketchNurbs`]]
           A single SketchNurbs if one element is requested, or a dictionary of
           SketchNurbs keyed by element name if multiple elements are requested.




   :Raises:

       :obj:`ValueError`
           If any requested element is missing from the JSON data.







   ..
       !! processed by numpydoc !!

.. py:method:: to_json_file(curves: dict[str, SketchNurbs], path: Union[str, pathlib.Path]) -> pathlib.Path
   :classmethod:


   
   Serialize one or more NURBS sketch curves to a JSON file.


   :Parameters:

       **curves** : :class:`python:dict`\[:class:`python:str`, :obj:`SketchNurbs`]
           Mapping of element name to the ``SketchNurbs`` to serialize
           under that name, e.g. {"hub_0": curve_1, "hub_1": curve_2}.

       **path** : :obj:`Union`\[:class:`python:str`, :obj:`Path`]
           File path to write the JSON to. Required.







   :Raises:

       :obj:`ValueError`
           If ``path`` is not provided, or ``curves`` is empty.







   ..
       !! processed by numpydoc !!

.. py:method:: partial_ellipse(center: ansys.geometry.core.math.point.Point2D, major_radius: pint.Quantity | ansys.geometry.core.misc.measurements.Distance | ansys.geometry.core.typing.Real, minor_radius: pint.Quantity | ansys.geometry.core.misc.measurements.Distance | ansys.geometry.core.typing.Real, start_angle: pint.Quantity | ansys.geometry.core.misc.measurements.Angle | ansys.geometry.core.typing.Real, end_angle: pint.Quantity | ansys.geometry.core.misc.measurements.Angle | ansys.geometry.core.typing.Real, angle: pint.Quantity | ansys.geometry.core.misc.measurements.Angle | ansys.geometry.core.typing.Real = 0) -> SketchNurbs
   :classmethod:


   
   Create an exact rational NURBS for a partial ellipse arc.


   :Parameters:

       **center** : :obj:`Point2D`
           Center of the ellipse.

       **major_radius** : :obj:`~pint.Quantity` | :obj:`Distance` | :obj:`Real`
           Semi-major axis length (x-direction before rotation).

       **minor_radius** : :obj:`~pint.Quantity` | :obj:`Distance` | :obj:`Real`
           Semi-minor axis length (y-direction before rotation).

       **start_angle** : :obj:`~pint.Quantity` | :obj:`Angle` | :obj:`Real`
           Parametric start angle. Defaults to radians when given as a ``Real``.

       **end_angle** : :obj:`~pint.Quantity` | :obj:`Angle` | :obj:`Real`
           Parametric end angle. Defaults to radians when given as a ``Real``.
           The arc sweeps counter-clockwise when ``end_angle > start_angle``.

       **angle** : :obj:`~pint.Quantity` | :obj:`Angle` | :obj:`Real`, default: 0
           Rotation of the ellipse about its center (radians when ``Real``).



   :Returns:

       :obj:`SketchNurbs`
           Exact rational quadratic NURBS (degree 2) for the requested arc.
           The arc is split into segments of at most 90° for numerical stability.




   :Raises:

       :obj:`ValueError`
           If either radius is non-positive.

       :obj:`ValueError`
           If ``start_angle`` equals ``end_angle`` (zero-length arc).







   ..
       !! processed by numpydoc !!




